2005-04-06  Matthias Wimmer  <m@tthias.net>

    * xdb_sql/xdb_sql.c: gcc 2.95.x fix

2005-03-30  Matthias Wimmer  <m@tthias.net>

    * jsm/jsm.h: sent out unsubscribed presences for removed roster items
    * jsm/modules/mod_roster.c: same
    * jsm/modules/mod_register.c: same
    * jsm/modules/mod_offline.c: config which types of messages are stored
    * xdb_file/xdbfiletool.c: don't link against libjabberdxdbfile, but load
    	the module at runtime
    * xdb_file/jabberdxdbfile.h: header not used anymore
    * xdb_file/xdb_file.c: same

2005-03-29  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/jabberdlib.h: optional history storage
    * jsm/jsm.c: same
    * jsm/jsm.h: same
    * jsm/sessions.c: same
    * jsm/modules/mod_xml.c: same
    * jsm/modules/mod_offline.c: same
    * xdb_sql/xdb_sql.c: handling of results for inserted data (offline msgs)

2005-03-19  Matthias Wimmer  <m@tthias.net>

    * configure.in: find openssl without pkg-config using --with-ssl-legacy
    * dialback/dialback.c: send stream error on idle stream
    * dialback/dialback_out.c: disable xmpp/starttls for configured hosts
    * jabberd/mio_ssl.c: configuration options to select SSL/TLS ciphers

2005-03-15  Matthias Wimmer  <m@tthias.net>

    * jabberd/base/base_unsubscribe.c: new base handler
    * jabberd/lib/jabberdlib.h: optional: store presence in xdb
    * jsm/modules/mod_presence.c: same
    * jsm/modules/mod_xml.c: same

2005-03-13  Matthias Wimmer  <m@tthias.net>

    * jabber.xml.dist.in: removed mod_filter from the default configuration
    * jabberd/config.c: remove 'included' configuration, we did not use it
    * jabberd/jabberd.c: same
    * jabberd/single.h: same (file removed)
    * xdb_sql/xdb_sql.c: fix for constructing queries for non-existant values

2005-03-11  Matthias Wimmer  <m@tthias.net>

    * jsm/modules/mod_auth_plain.c: log new account registrations

2005-03-10  Matthias Wimmer  <m@tthias.net>
